corrected alignment of content and fixed container tags for index items

--- a/app/assets/stylesheets/games_styling.css
+++ b/app/assets/stylesheets/games_styling.css
@@ -1,9 +1,27 @@
 .games-directory {
     position: fixed;
+    top: 250px;
+    left: 300px;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+}
+
+.game-index-item-container {
+    position: fixed;
     top: 100px;
     left: 300px;
     width: 90%;
-    display: grid;
+}
+
+.game-index-list-items {
+    display: flex;
+    justify-content: space-around;
+}
+
+.index-item-information {
+    display: inline-block;
+
 }
 
 .fake-ad-container {
@@ -30,5 +48,3 @@
 .game-photograph {
     border-radius: 5px;
 }
-
-/Users/k.brimm/Desktop/kevinTv/app/assets/images/jointhecommunity.png
